tests/ui/span/suggestion-raw-68962.stderr
error[E0425]: cannot find value `fina` in this scope
  --> $DIR/suggestion-raw-68962.rs:7:5
   |
LL |     fina;
   |     ^^^^
   |
help: a local variable with a similar name exists
   |
LL -     fina;
LL +     r#final;
   |

error[E0425]: cannot find function `f` in this scope
  --> $DIR/suggestion-raw-68962.rs:10:5
   |
LL | fn r#fn() {}
   | --------- similarly named function `r#fn` defined here
...
LL |     f();
   |     ^
   |
help: a function with a similar name exists
   |
LL -     f();
LL +     r#fn();
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
